cmake_minimum_required(VERSION 3.10)

set(PROJECT_NAME mc_contact_estimation)
set(PROJECT_DESCRIPTION "")
set(PROJECT_URL "")
set(PROJECT_VERSION 0.0.1)
set(PROJECT_GENERATED_HEADERS_SKIP_DEPRECATED ON)
set(PROJECT_GENERATED_HEADERS_SKIP_CONFIG ON)
set(PROJECT_GENERATED_HEADERS_SKIP_WARNING ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(DOXYGEN_USE_MATHJAX "YES")
set(CMAKE_CXX_STANDARD 14)
set(CXX_DISABLE_WERROR 1)

include(cmake/base.cmake)

project(${PROJECT_NAME} LANGUAGES CXX)

find_package(mc_rtc REQUIRED)

add_subdirectory(src)
